tests/ui/attr-bad-crate-attr.stderr
error: expected item after attributes
  --> $DIR/attr-bad-crate-attr.rs:4:1
   |
LL | #[attr = "val"] // Unterminated
   | ^^^^^^^^^^^^^^^

error: aborting due to previous error

