tests/ui/attr-bad-crate-attr.rs
// error-pattern: expected item

#![attr = "val"]
#[attr = "val"] // Unterminated
